Attempted fix for bad formatting on mobile

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -168,13 +168,13 @@ a {
 
   @include large {
     max-width: 64rem;
-    padding: 2rem 20rem; // was 6
+    padding: 2rem 6rem;
     margin: 0 auto;
     font-size: 1.1rem;
   }
 
   @include medium {
-    padding: 2rem 4rem;
+    padding: 2rem 1rem;
     font-size: 1.1rem;
   }
 
